2005-05-18:
	* src/afs5log.1: add
	* src/Makefile.am: install afs5log and afs5log.1
	* src/afs5log.c: debug-log when we're obtaining tokens for the local
	or the user's home cell
	* src/minikafs.c(realm_of_cell): debug-log IP->hostname conversion
2005-05-09:
	* src/minikafs.c(realm_of_cell): debug-log failures in the whereis
	pioctl, stop looking at addresses if we hit 0.0.0.0.
	* src/minikafs.c(minikafs_5log): if realm_of_cell succeeds, don't
	clear the realm name (duh).

2005-05-09:
	* src/minikafs.c: add a wrapper for the ws_cell pioctl.
	* src/tokens.c,src/afs5log.c: use ws_cell to find the default cell
	instead of guessing by doing a cell_of_file on /afs

2005-04-27:
	* src/minikafs.c: also try afs@DEFAULTREALM if the default realm is
	not the same as the derived realm (sort of from Christopher Allen Wing).
	* src/options.c,src/options.h: track a "ignore_unknown_principals"
	boolean flag, with "ignore_unknown_spn" being consulted if it's unset.
	Parse cell names which contain a '=' character as if they're of the
	form cell_name=principal_name.
	* src/minikafs.c,src/minikafs.h: if a principal name was given, try
	to get creds for the named service and use them.  If that doesn't work,
	fall back to previous behavior.
	* src/afs5log.c: parse "=" signs in command-line arguments, as options.c
	does.
	* src/acct.c: return PAM_IGNORE if the error is either
	KDC_ERR_C_PRINCIPAL_UNKNOWN or KDC_ERR_NAME_EXP and
	ignore_unknown_principals was set, else PAM_USER_UNKNOWN as before.
	* src/v5.c: return PAM_IGNORE if the error is either
	KDC_ERR_C_PRINCIPAL_UNKNOWN or 5KDC_ERR_NAME_EXP and
	ignore_unknown_principals was set, else PAM_USER_UNKNOWN as
	before.
	* src/minikafs.c: correctly handle E2BIG errors from a WHEREIS pioctl,
	bug spotted by Lamont Granquist.  Handle multiple IPs coming back,
	and try to look up a host name and realm name in turn until we either
	succeed or run out of addresses.
	* src/minikafs.c: when obtaining tokens, try to get credentials for